<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.dupreincaperu.dupree.mh_fragments_menu.ConfigModPerfilFragment">

        <!-- TODO: Update blank fragment layout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/azulDupree"
                    android:text="@string/modificar_perfil"/> -->

                <TextView
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:text="@string/datos_personales"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtNamePerfil"
                        android:layout_marginTop="8dp"
                        android:focusableInTouchMode="false"
                        android:digits="@string/only_letter_basic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_s"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtLastnamePerfil"
                        android:layout_marginTop="8dp"
                        android:focusableInTouchMode="false"
                        android:digits="@string/only_letter_basic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido_s"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:text="@string/contacto"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtPhonePerfil"
                        android:inputType="phone"
                        android:layout_marginTop="8dp"
                        android:maxLength="7"
                        android:digits="@string/only_number_basic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono_fijo"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtCellphonePerfil"
                        android:inputType="phone"
                        android:layout_marginTop="8dp"
                        android:maxLength="9"
                        android:digits="@string/only_number_basic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono_movil"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/txtEmail"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="8dp"
                        android:digits="@string/date_electronico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo_electronico"/>
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btnEditPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_azul"
                        android:textColor="@color/black"
                        android:text="@string/enviar"/>
                </LinearLayout>

            </LinearLayout>


        </ScrollView>

    </FrameLayout>
</layout>